adding inspect changes